--- a/sentinel-dashboard/src/main/webapp/resources/app/scripts/directives/sidebar/sidebar.html
+++ b/sentinel-dashboard/src/main/webapp/resources/app/scripts/directives/sidebar/sidebar.html
@@ -41,7 +41,7 @@
 
           <li ui-sref-active="active" ng-if="entry.appType==0">
           <a ui-sref="dashboard.flow({app: entry.app})">
-          <i class="glyphicon glyphicon-filter"></i>&nbsp;&nbsp;流控规则 V1</a>
+          <i class="glyphicon glyphicon-filter"></i>&nbsp;&nbsp;流控规则_V1(Memory)</a>
           </li>
 
           <li ui-sref-active="active" ng-if="entry.isGateway">
